--- a/src/main/resources/static/statistics.html
+++ b/src/main/resources/static/statistics.html
@@ -9,36 +9,39 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+        .card {
+            height: 100%;
+        }
+        .card-body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 2rem; /* 카드 내용의 패딩을 늘려서 여백을 확보합니다 */
+        }
+        .progress-bar {
+            text-align: center;
+            color: white;
+            font-size: 1.25rem; /* 폰트 크기를 키워서 텍스트를 크게 표시합니다 */
+        }
+        .progress {
+            height: 2rem; /* 프로그레스 바의 높이를 늘려서 시각적으로 크게 보이게 합니다 */
+        }
+        .card-header h6 {
+            font-size: 1.5rem; /* 카드 헤더의 텍스트 크기를 크게 설정합니다 */
+        }
+    </style>
 </head>
 <body>
 <header></header>
 
-<div class="container-fluid" style="margin-left: 250px; padding-top: 20px;">
+<div class="container" style="margin-left: 250px; padding-top: 20px;">
     <h1>메인 페이지</h1>
 
-    <!-- 네비게이션 탭 -->
-    <ul class="nav nav-tabs" id="myTab" role="tablist">
-        <li class="nav-item" role="presentation">
-            <a class="nav-link active" id="mbti-tab" data-bs-toggle="tab" href="#mbti" role="tab" aria-controls="mbti" aria-selected="true">MBTI</a>
-        </li>
-        <li class="nav-item" role="presentation">
-            <a class="nav-link" id="gender-tab" data-bs-toggle="tab" href="#gender" role="tab" aria-controls="gender" aria-selected="false">남녀 비율</a>
-        </li>
-        <li class="nav-item" role="presentation">
-            <a class="nav-link" id="major-tab" data-bs-toggle="tab" href="#major" role="tab" aria-controls="major" aria-selected="false">전공</a>
-        </li>
-        <li class="nav-item" role="presentation">
-            <a class="nav-link" id="region-tab" data-bs-toggle="tab" href="#region" role="tab" aria-controls="region" aria-selected="false">사는 지역</a>
-        </li>
-        <li class="nav-item" role="presentation">
-            <a class="nav-link" id="hobbies-tab" data-bs-toggle="tab" href="#hobbies" role="tab" aria-controls="hobbies" aria-selected="false">취미</a>
-        </li>
-    </ul>
-
-    <!-- 탭 콘텐츠 -->
-    <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="mbti" role="tabpanel" aria-labelledby="mbti-tab">
-            <div class="card shadow mt-4">
+    <div class="row mb-4">
+        <!-- MBTI 차트 -->
+        <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card shadow">
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-center">
                     <h6 class="m-0 font-weight-bold text-primary">MBTI</h6>
                 </div>
@@ -50,8 +53,37 @@
             </div>
         </div>
 
-        <div class="tab-pane fade" id="gender" role="tabpanel" aria-labelledby="gender-tab">
-            <div class="card shadow mt-4">
+        <!-- 전공 바 차트 -->
+        <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card shadow">
+                <div class="card-header py-3">
+                    <h6 class="m-0 font-weight-bold text-primary">전공</h6>
+                </div>
+                <div class="card-body">
+                    <canvas id="major-bar-chart"></canvas>
+                </div>
+            </div>
+        </div>
+
+        <!-- 사는 지역 차트 -->
+        <div class="col-lg-4 col-md-12 mb-4">
+            <div class="card shadow">
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-center">
+                    <h6 class="m-0 font-weight-bold text-primary">사는 지역</h6>
+                </div>
+                <div class="card-body">
+                    <div class="chart-container">
+                        <canvas id="region-pie-chart"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mb-4">
+        <!-- 남녀 비율 프로그레스 바 -->
+        <div class="col-lg-12 mb-4">
+            <div class="card shadow">
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-center">
                     <h6 class="m-0 font-weight-bold text-primary">남녀 비율</h6>
                 </div>
@@ -63,38 +95,17 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="tab-pane fade" id="major" role="tabpanel" aria-labelledby="major-tab">
-            <div class="card shadow mt-4">
-                <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">전공</h6>
-                </div>
-                <div class="card-body">
-                    <canvas id="major-bar-chart"></canvas>
-                </div>
-            </div>
-        </div>
-
-        <div class="tab-pane fade" id="region" role="tabpanel" aria-labelledby="region-tab">
-            <div class="card shadow mt-4">
-                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-center">
-                    <h6 class="m-0 font-weight-bold text-primary">사는 지역</h6>
-                </div>
-                <div class="card-body">
-                    <div class="chart-container">
-                        <canvas id="region-pie-chart"></canvas>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="tab-pane fade" id="hobbies" role="tabpanel" aria-labelledby="hobbies-tab">
-            <div class="card shadow mt-4">
+    <!-- 취미 프로그레스 바 카드 -->
+    <div class="row">
+        <div class="col-12">
+            <div class="card shadow">
                 <div class="card-header py-3">
                     <h6 class="m-0 font-weight-bold text-primary">취미</h6>
                 </div>
                 <div class="card-body">
-                    <div id="hobby-progress-bars">
+                    <div id="hobby-progress-bars" class="d-flex flex-column">
                         <!-- 취미 프로그레스 바가 동적으로 추가됩니다 -->
                     </div>
                 </div>
@@ -219,15 +230,21 @@
                     labels: regionLabels,
                     datasets: [{
                         data: regionCounts,
-                        backgroundColor: ['#ff6384', '#36a2eb', '#cc65fe', '#ffce56', '#e7e9ed', '#c0c0c0'],
+                        backgroundColor: ['#4e73df', '#1cc88a', '#36b9cc', '#e74a3b', '#f6c23e', '#f8b400', '#6c5ce7', '#c7e0f4'],
                     }],
                 },
                 options: {
                     responsive: true,
-                    maintainAspectRatio: false, // 비율 유지 비활성화
                     plugins: {
                         legend: {
                             display: true,
+                        },
+                        tooltip: {
+                            callbacks: {
+                                label: function(tooltipItem) {
+                                    return tooltipItem.label + ': ' + tooltipItem.raw;
+                                }
+                            }
                         }
                     }
                 }
