통계페이지 작업완

--- a/src/main/resources/static/statistics.html
+++ b/src/main/resources/static/statistics.html
@@ -36,7 +36,7 @@
 <header></header>
 
 <div class="container" style="margin-left: 250px; padding-top: 20px;">
-    <h1>메인 페이지</h1>
+    <h1>통계 페이지</h1>
 
     <div class="row mb-4">
         <!-- MBTI 차트 -->
