--- a/src/main/resources/static/statistics.html
+++ b/src/main/resources/static/statistics.html
@@ -57,7 +57,7 @@
         <div class="col-lg-4 col-md-6 mb-4">
             <div class="card shadow">
                 <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">전공</h6>
+                    <h6 class="m-0 font-weight-bold text-primary justify-content-center">전공</h6>
                 </div>
                 <div class="card-body">
                     <canvas id="major-bar-chart"></canvas>
