fix: 정보 통계 화면에서도 navbar 이용 가능하도록 수정

--- a/src/main/resources/static/statistics.html
+++ b/src/main/resources/static/statistics.html
@@ -115,6 +115,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+<script type="module" src="/js/auth.js"></script>
 <script src="/js/navbar.js"></script>
 <script>
     // MBTI 데이터로 차트 생성
