--- a/src/main/resources/static/navbar.html
+++ b/src/main/resources/static/navbar.html
@@ -22,6 +22,10 @@
             <li>
                 <a href="/board.html"><i class="bi bi-chat-dots"></i> 취미 공유</a>
             </li>
+            <li>
+                <a href="/profile.html"> <i class="bi bi-person"></i> 프로필 요청
+                </a>
+            </li>
         </ul>
 
         <div class="logout-section p-3 mt-auto">
