--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -277,6 +277,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/navbar.js"></script>
+<script type="module" src="/js/auth.js"></script>
 
 <script>
 
@@ -380,8 +381,17 @@
             .map(checkbox => checkbox.value);
         formData.append('subHobbies', JSON.stringify(selectedSubHobbies));
 
+        const token = localStorage.getItem("accessToken");
+        if (!token) {
+            console.error("토큰이 없습니다.");
+            return;
+        }
+
         fetch(`/api/profiles`, {
             method: 'POST',
+            headers: {
+                'Authorization': 'Bearer ' + token
+            },
             body: formData
         }).then(response => response.json())
             .then(data => {
