--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -54,15 +54,15 @@
       word-wrap: break-word;
     }
     .badge {
-      background-color: #ff007f; /* 배지 배경 색상 */
-      color: white; /* 텍스트 색상 */
-      padding: 5px 10px; /* 배지 패딩 */
-      border-radius: 12px; /* 배지 모서리 둥글게 */
-      font-size: 0.9rem; /* 글자 크기 */
-      font-weight: 500; /* 글자 두께 */
+      background-color: #ff007f;
+      color: white;
+      padding: 5px 10px;
+      border-radius: 12px;
+      font-size: 0.9rem;
+      font-weight: 500;
     }
     .btn-thumbs-up {
-      background-color: #ffc107; /* 따봉 버튼 노란색 */
+      background-color: #ffc107;
       color: white;
       font-size: 1.2rem;
       padding: 10px 20px;
@@ -71,10 +71,14 @@
       margin-top: 20px;
       transition: background-color 0.3s, transform 0.3s;
     }
-
     .btn-thumbs-up:hover {
-      background-color: #e0a800; /* hover 시 색상 변화 */
-      transform: scale(1.05); /* hover 시 크기 약간 확대 */
+      background-color: #e0a800;
+      transform: scale(1.05);
+    }
+    .action-buttons {
+      display: flex;
+      gap: 10px;
+      margin-top: 20px;
     }
   </style>
 </head>
@@ -96,7 +100,17 @@
     <strong>따봉:</strong> <span id="thumbsUpCount">0</span>
     <button class="btn-thumbs-up" onclick="addThumbsUp(postId)">따봉 👍</button>
   </p>
+
+  <!-- 수정 및 삭제 버튼 추가 -->
+  <div class="action-buttons">
+    <!-- 수정 버튼 -->
+    <button id="editButton" class="btn btn-custom" data-bs-toggle="modal" data-bs-target="#editModal" style="display: none;">수정</button>
+    <!-- 삭제 버튼 -->
+    <button id="deleteButton" class="btn btn-danger" onclick="deletePost(postId)" style="display: none;">삭제</button>
+  </div>
+
   <!-- 수정 모달 -->
+
   <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -115,6 +129,24 @@
               <textarea class="form-control" id="editContent" rows="5" required></textarea>
             </div>
             <div class="mb-3">
+              <label for="editHobby" class="form-label">취미 카테고리</label>
+              <select class="form-select" id="editHobby" required>
+                <option value="" disabled selected>취미 카테고리를 선택하세요</option>
+                <option value="CULTURAL_LIFE">문화생활</option>
+                <option value="EXERCISE">운동</option>
+                <option value="FOOD">음식</option>
+                <option value="GAME">게임</option>
+                <option value="MUSIC">음악</option>
+                <option value="TRAVEL">여행</option>
+                <option value="ETC">기타</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="editVideoLink" class="form-label">비디오 링크</label>
+              <input type="text" class="form-control" id="editVideoLink" placeholder="비디오 링크를 입력하세요">
+              <div class="invalid-feedback">유효한 유튜브 링크를 입력하세요.</div>
+            </div>
+            <div class="mb-3">
               <button type="submit" class="btn btn-primary">저장</button>
             </div>
           </form>
@@ -122,14 +154,11 @@
       </div>
     </div>
   </div>
-  <!-- 삭제 버튼 추가 -->
-  <div>
-    <button class="btn btn-danger" onclick="deletePost(postId)">삭제</button>
-  </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/navbar.js"></script>
+<script type="module" src="/js/auth.js"></script>
 
 <script>
   let postId;
@@ -147,13 +176,13 @@
     });
   });
 
-
   function fetchPostDetail(postId) {
     fetch(`/api/posts/${postId}`)
             .then(response => response.json())
             .then(data => {
               renderPostDetail(data);
               updateThumbsUp(data.response.thumbsUp);
+              checkOwnership(data.response.userId); // 사용자 확인 함수 호출
             });
   }
 
@@ -169,23 +198,48 @@
         <a href="${post.response.videoLink}" class="btn-link" target="_blank">🔗 비디오 링크 보기</a>
         <p class="link-url">링크 주소: <a href="${post.response.videoLink}" target="_blank">${post.response.videoLink}</a></p>
       ` : ''}
-      <button class="btn btn-custom" data-bs-toggle="modal" data-bs-target="#editModal">수정</button>
     `;
-    // 따봉 버튼이 있을 때만 이벤트 리스너 추가
-    const thumbsUpButton = document.getElementById('thumbsUpButton');
-    if (thumbsUpButton) {
-      thumbsUpButton.addEventListener('click', function() {
-        addThumbsUp(post.response.id);
-      });
-    }
+
+    document.getElementById('editTitle').value = post.response.title;
+    document.getElementById('editContent').value = post.response.description;
+    document.getElementById('editHobby').value = post.response.hobbyCategory;
+    document.getElementById('editVideoLink').value = post.response.videoLink || '';
   }
 
-  // 따봉 수 업데이트 함수
+  function checkOwnership(author) {
+    const token = localStorage.getItem("accessToken");
+
+    if (!token) {
+      console.error("토큰이 없습니다.");
+      return;
+    }
+
+    const decodedToken = parseJwt(token);
+    const currentUser = decodedToken.id;
+
+    if (author === currentUser) {
+      document.getElementById('editButton').style.display = 'inline-block';
+      document.getElementById('deleteButton').style.display = 'inline-block';
+    }
+
+    if (decodedToken.role === 'ROLE_ADMIN') {
+      document.getElementById('deleteButton').style.display = 'inline-block';
+    }
+  }
+  function parseJwt(token) {
+    const base64Url = token.split('.')[1];
+    const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+    const jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
+      return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+    }).join(''));
+
+    return JSON.parse(jsonPayload);
+  }
+
   function updateThumbsUp(thumbsUp) {
     document.getElementById('thumbsUpCount').textContent = thumbsUp;
   }
 
-  // 따봉 수 추가 함수
   function addThumbsUp(postId) {
     fetch(`/api/posts/${postId}/thumbsUp`, { method: 'GET' })
             .then(response => response.json())
@@ -197,23 +251,23 @@
   function updatePost(postId) {
     const title = document.getElementById('editTitle').value;
     const description = document.getElementById('editContent').value;
+    const hobbyCategory = document.getElementById('editHobby').value;
+    const videoLink = document.getElementById('editVideoLink').value;
 
     fetch(`/api/posts/${postId}`, {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json'
       },
-      body: JSON.stringify({ title, description })
+      body: JSON.stringify({ title, description, hobbyCategory, videoLink })
     })
             .then(response => response.json())
             .then(data => {
               alert('글이 수정되었습니다.');
-              document.querySelector('[data-bs-dismiss="modal"]').click(); // 모달 닫기
-              fetchPostDetail(postId); // 게시물 상세 새로 고침
+              window.location.reload();
             });
   }
 
-  // 삭제 함수
   function deletePost(postId) {
     if (confirm('정말로 이 게시물을 삭제하시겠습니까?')) {
       fetch(`/api/posts/${postId}`, { method: 'DELETE' })
@@ -228,6 +282,5 @@
     }
   }
 </script>
-
 </body>
 </html>
