--- a/src/main/resources/static/navbar.html
+++ b/src/main/resources/static/navbar.html
@@ -6,7 +6,7 @@
         </div>
         <ul class="list-unstyled components flex-grow-1">
             <li class="active">
-                <a href="/index.html"><i class="bi bi-house-door"></i> 홈</a>
+                <a href="/"><i class="bi bi-house-door"></i> 홈</a>
             </li>
             <li>
                 <a href="#" data-bs-toggle="modal" data-bs-target="#profileModal">
