--- a/src/main/resources/static/statistics.html
+++ b/src/main/resources/static/statistics.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>U+ 홈 페이지</title>
+    <title>유레카 정보 관리</title>
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/statistics.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
@@ -118,8 +118,19 @@
 <script type="module" src="/js/auth.js"></script>
 <script src="/js/navbar.js"></script>
 <script>
+    const token = localStorage.getItem("accessToken");
+        if (!token) {
+            console.error("토큰이 없습니다.");
+        }
+
     // MBTI 데이터로 차트 생성
-    fetch('/api/statistics/mbti')
+    fetch('/api/statistics/mbti', {
+                    method: 'GET',
+                    headers: {
+                        'Authorization': 'Bearer ' + token,
+                        'Content-Type': 'application/json'
+                    }
+         })
         .then(response => response.json())
         .then(data => {
             console.log('MBTI 데이터:', data);
@@ -160,7 +171,13 @@
         .catch(error => console.error('MBTI 데이터 가져오기 오류:', error));
 
     // 남녀 비율 데이터로 프로그레스 바 업데이트
-    fetch('/api/statistics/gender')
+    fetch('/api/statistics/gender' , {
+                    method: 'GET',
+                    headers: {
+                        'Authorization': 'Bearer ' + token,
+                        'Content-Type': 'application/json'
+                    }
+})
         .then(response => response.json())
         .then(data => {
             console.log('남녀 비율 데이터:', data);
@@ -179,7 +196,13 @@
         .catch(error => console.error('남녀 비율 데이터 가져오기 오류:', error));
 
     // 전공 카드 데이터로 바 차트 생성
-    fetch('/api/statistics/major')
+    fetch('/api/statistics/major', {
+                    method: 'GET',
+                    headers: {
+                        'Authorization': 'Bearer ' + token,
+                        'Content-Type': 'application/json'
+                    }
+})
         .then(response => response.json())
         .then(data => {
             console.log('전공 데이터:', data);
@@ -234,7 +257,13 @@
         .catch(error => console.error('전공 데이터 가져오기 오류:', error));
 
     // 사는 지역 데이터로 파이 차트 생성
-    fetch('/api/statistics/region')
+    fetch('/api/statistics/region', {
+                    method: 'GET',
+                    headers: {
+                        'Authorization': 'Bearer ' + token,
+                        'Content-Type': 'application/json'
+                    }
+})
         .then(response => response.json())
         .then(data => {
             console.log('사는 지역 데이터:', data);
@@ -268,7 +297,13 @@
         .catch(error => console.error('사는 지역 데이터 가져오기 오류:', error));
 
     // 취미 데이터로 프로그레스 바 업데이트
-    fetch('/api/statistics/hobbies')
+    fetch('/api/statistics/hobbies', {
+                    method: 'GET',
+                    headers: {
+                        'Authorization': 'Bearer ' + token,
+                        'Content-Type': 'application/json'
+                    }
+})
         .then(response => response.json())
         .then(data => {
             console.log('취미 데이터:', data); // 데이터 확인용 콘솔 로그
